After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 597596 - Toolbar button accessible objects don't have label name
Toolbar button accessible objects don't have label name
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkToolbar
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 596041 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-10-06 19:27 UTC by Eitan Isaacson
Modified: 2009-11-27 20:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Test case (1.41 KB, text/x-python)
2009-10-06 19:27 UTC, Eitan Isaacson
  Details
Explicitly set the accessible name of GtkToolButton. (1.27 KB, patch)
2009-10-06 19:30 UTC, Eitan Isaacson
committed Details | Review

Description Eitan Isaacson 2009-10-06 19:27:49 UTC
Created attachment 144906 [details]
Test case

Toolbar buttons don't use the label assigned to them. Instead they fallback on
the stock icon name, if one was supplied, or return no name.

To reproduce:

1. Run attached pygtk demo.
2. In Accerciser, examine the toolbar button, it's name is 'New', it should be
'Old'.
Comment 1 Eitan Isaacson 2009-10-06 19:30:08 UTC
Created attachment 144907 [details] [review]
Explicitly set the accessible name of GtkToolButton.

GAIL is not able to retrieve the correct button name alone, so it must be set in gtktoolbutton.c
Comment 2 Matthias Clasen 2009-10-10 20:35:46 UTC
Comment on attachment 144907 [details] [review]
Explicitly set the accessible name of GtkToolButton.

Looks good to me, please commit
Comment 3 Eitan Isaacson 2009-10-11 01:13:20 UTC
Comment on attachment 144907 [details] [review]
Explicitly set the accessible name of GtkToolButton.

Thanks!
Comment 4 Matthias Clasen 2009-11-27 20:16:11 UTC
*** Bug 596041 has been marked as a duplicate of this bug. ***